horizontal scrolling issue

--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,10 @@ body {
 
 
 #navbar {
-    width:100%;
+    width:96%;
 }
 #navbar-left {
-    width: 25%;
+    width: 29%;
     float: left;
 }
 #navbar-left img {
@@ -40,14 +40,14 @@ body {
 #navbar-right {
     float: right;
     margin-top: -23px;
-    width: 22%;
+    width: 17%;
     margin-right: -4%;
 }
 
 #navbar-right ul li {
     display: inline-flex;
     list-style: none;
-    padding-left: 7%;
+    padding-left: 11%;
 }
 #navbar-right ul li img {
     width: 100%;
@@ -55,7 +55,6 @@ body {
 [type=text] {
     width: 40%;
     height: 21px;
-
 }
 
 
@@ -83,7 +82,9 @@ body {
     margin-top: 11px;
     display: flex;
     flex-direction: row;
+    border-bottom: 1px solid grey;
 }
+
 .main-left-intro  img {
     height: 14px;
     padding: 2px;
@@ -96,11 +97,19 @@ body {
     margin-right: 16px;
     font-size: smaller;
 }
-.main-left-channel strong{
-    margin: 12px;
-}
+
 .main-left-channel{
     margin-top: 6px;
+    border-bottom: 1px solid grey;
+    margin-bottom: 10px;
+    padding-bottom: 7px;
+}
+.main-left-channel p {
+    margin-top: 19px;
+}
+
+.main-left-channel strong{
+    margin: 12px;
 }
 .main-left-channel-app {
     float: right;
@@ -116,12 +125,26 @@ body {
     font-weight: bold;  
 }
 .main-left-channel-app img{
-  
-    width: 20px;
-  
+   width: 20px;
+}
+.main-left-channel-app a {
+    margin-top: 19px;
+}
+.allcomment {
+    padding-bottom: 8px;
+}
+.main-left-comment {
+   border-bottom: 1px solid grey;
 }
 .main-left-writecomment i{
     color: #757967;
+}
+.comments {
+    display: inline-block;
+    border-bottom: 1px solid grey;
+    width: 100%;
+    margin-top: 7px;
+    padding: 2px;
 }
 .main-left-writecomment .comments img {
  height: 14px;
